# api-server

./: CONTRIBUTING.md  DEPLOYMENT.md  README.md  UI-Component.md  deploy-wrapper.sh  deploy.sh  table_spec.md
guanfu_backend/: .env.example  .gitignore  Dockerfile  PUBSUB_README.md  docker-compose.yaml  monitor_pubsub.py  pyproject.toml  setup-env.sh  start_with_redis.py  test_pubsub.py
guanfu_backend/config/: config.py  db.py  ops.py  redis.py
guanfu_backend/docs/: getting-started.md
guanfu_backend/migrations/: env.py
guanfu_backend/migrations/versions/: 2025_01_15_0000-add_request_logs_table.py  2025_10_08_0126-306bac7e813c_init.py  2025_10_09_2311-379340d63c90_add_spam_warn_to_supplies.py  2025_10_09_2311-d1ff2430cd77_add_marquee_announcements.py
guanfu_backend/nginx/conf.d/: default.conf
guanfu_backend/src/: background_processor.py  config.py  crud.py  database.py  enum_serializer.py  enums.py  main.py  models.py  network.py  pubsub.py  schemas.py
guanfu_backend/src/middleware/: api_key.py  app_auth.py
guanfu_backend/src/models/: __init__.py  accommodations.py  base.py  human_resources.py  medical_stations.py  mental_health_resources.py  reports.py  restrooms.py  shelters.py  shower_stations.py  supplies.py  volunteer_organizations.py  water_refill_stations.py
guanfu_backend/src/routers/: accommodations.py  human_resources.py  line.py  marquee_announcement.py  medical_stations.py  mental_health_resources.py  oauth2.py  places.py  reports.py  request_logs.py  requirements_hr.py  (+8 more)
guanfu_backend/tests/: __init__.py  conftest.py  test_places.py
(+7 files in other folders)
