[tool.poetry]
name = "guanfu-backend"
version = "0.1.0"
description = ""
authors = ["jerry.liu <jerry.liu@uancare.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.118.0,<0.119.0"
uvicorn = ">=0.37.0,<0.38.0"
python-dotenv = ">=1.1.1,<2.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
sqlmodel = ">=0.0.14,<1.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
alembic = "^1.16.5"
pydantic = "^2.11.10"
asyncpg = "^0.30.0"
greenlet = "^3.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
